--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "imaginaerum/magento2-language-fr-fr",
-    "description": "Magento2 French Language Pack (fr_FR)",
-    "version": "100.6.23",
+    "name": "cbrunet/magento2-language-fr-ca",
+    "description": "Magento2 French Language Pack (fr_CA)",
+    "version": "100.7.00",
     "type": "magento2-language",
-    "homepage": "http://imaginaerum.github.io/magento2-language-fr-fr",
+    "homepage": "http://cbrunet.github.io/magento2-language-fr-ca",
     "keywords": [
         "magento",
         "magento2",
@@ -12,7 +12,7 @@
         "module",
         "french",
         "language pack",
-        "fr_FR",
+        "fr_CA",
         "i18n",
         "fr"
     ],
