--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "cbrunet/magento2-language-fr-ca",
     "description": "Magento2 French Language Pack (fr_CA)",
-    "version": "100.7.00",
+    "version": "100.7.01",
     "type": "magento2-language",
     "homepage": "http://cbrunet.github.io/magento2-language-fr-ca",
     "keywords": [
@@ -19,7 +19,7 @@
     "license": [
         "MIT"
     ],
-    "require": {"imaginaerum/magento2-language-fr-fr"},
+    "require": {"imaginaerum/magento2-language-fr-fr":"100.6.*"},
     "autoload": {
         "files": [
             "registration.php"
